java 8 transfer "We're born alone, we live alone, we die alone. Only through our love and friendship can we create the illusion for the moment that we're not alone." --Orson Welles